--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,19 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="279dp"
-        android:layout_height="585dp"
+        android:layout_width="355dp"
+        android:layout_height="670dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/gluko" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,21 +28,21 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btnInicioSesion"
                 android:layout_width="108dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
                 android:onClick="login"
-                android:layout_marginHorizontal="10dp"
                 android:text="@string/btn_iniciar" />
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnRegistro"
                 android:layout_width="108dp"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
                 android:onClick="register"
-                android:layout_marginHorizontal="10dp"
                 android:text="@string/btn_registrar" />
 
         </LinearLayout>
