--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,36 +7,48 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="279dp"
-        android:layout_height="585dp"
+        android:layout_width="408dp"
+        android:layout_height="730dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:srcCompat="@tools:sample/avatars" />
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#ab8fc0"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
 
             <Button
                 android:id="@+id/button6"
                 android:layout_width="108dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="login"
                 android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#7f3065"
+                android:onClick="login"
                 android:text="@string/btn_iniciar" />
 
             <Button
                 android:id="@+id/button5"
                 android:layout_width="108dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="register"
                 android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:backgroundTint="#7f3065"
+                android:onClick="register"
                 android:text="@string/btn_registrar" />
 
         </LinearLayout>
