--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
 
     <LinearLayout
 
-        android:layout_width="408dp"
-        android:layout_height="730dp"
-        android:background="#ab8fc0"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/backgorund">
 
 
         <ImageView
@@ -24,13 +24,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:background="#ab8fc0"
-            app:srcCompat="@drawable/gluko" />
+            app:srcCompat="@drawable/fondop" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#ab8fc0"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -41,7 +39,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="#7f3065"
                 android:onClick="login"
                 android:text="@string/btn_iniciar" />
 
@@ -51,7 +48,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="#7f3065"
                 android:onClick="register"
                 android:text="@string/btn_registrar" />
 
