--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,15 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#cf1515</color>
     <color name="red_500">#a60f0f</color>
+
+    <color name="primaryColor">#3f51b5</color>
+    <color name="primaryLightColor">#757de8</color>
+    <color name="primaryDarkColor">#002984</color>
+    <color name="secondaryColor">#aed581</color>
+    <color name="secondaryLightColor">#e1ffb1</color>
+    <color name="secondaryDarkColor">#7da453</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#000000</color>
+    <color name="backgorund">#221d31</color>
+    <color name="backgorundVariant">#9685cf</color>
 </resources>
