--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,8 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="363dp"
-            android:layout_height="450dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:background="@color/backgorund"
