--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -157,7 +157,7 @@
             android:layout_height="47dp" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="registerUser"
