--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/primaryColor</item>
         <!-- Customize your theme here. -->
+        <item name="background">@color/primaryTextColor</item>
     </style>
     
     <style name="SplashTheme" parent="Theme.Gluko">
