--- a/app/src/main/res/layout/activity_pantalla_principal.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal.xml
@@ -19,7 +19,7 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginHorizontal="20dp"
                 android:background="@color/primaryTextColor">
 
@@ -166,22 +166,23 @@
                 android:layout_marginHorizontal="20dp"
                 android:background="@color/primaryTextColor">
 
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content">
 
-                    <ListView
-                        android:id="@+id/listAlimentos"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                    </ListView>
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
 
+                        <ListView
+                            android:id="@+id/listAlimentos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        </ListView>
 
-                </LinearLayout>
-
-
-
+                    </LinearLayout>
+                </ScrollView>
 
             </com.google.android.material.card.MaterialCardView>
 
